app/assets/stylesheets/custom.css
/* Eric Meyer's Reset CSS v2.0 - http://cssreset.com */
html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}

body{
  margin: 0px;

}

.fixed_fullwidth_footer {
  /*TODO: Determine proper way to override .ui-footer */
  /*position: fixed; */
  bottom: 0px;
  width: 100%;
}

#navBox_wc {

  width: 100%;
  min-height: 100px;
  overflow: hidden;
  background-color: #232323;
  /*font-family: 'GibsonRegular', Verdana, sans-serif;*/
  /*position: fixed;
  z-index:3;
   -moz-box-shadow: 0px 0px 15px #808080;
    -webkit-box-shadow: 0px 0px 15px #808080;
    box-shadow: 0px 0px 15px #808080;*/
}
.wrap_section_narrow{
  max-width:620px;

  margin:0 auto 0 auto;
  padding-left: 20px;
  padding-right: 20px;
}
.logo_wc{

    /*background-color:#ffeeee;*/

  background: url(../img/worldcuplogo.png) no-repeat;
  background-size: 270px 100px;
  width: 270px;
  height: 100px;
  display: block;
    float: left;
    padding-right: 20px;
    /*padding: 28px 20px 0px;*/
    margin-left: 0px;
     /*margin-top: 20px;*/

}
.marginblock_wc{
  width: 625px;


  position: relative;
  margin:0 auto 0 auto;


}
#centerNav_wc{
  width: 625px;

  min-height: 100px;
  position: relative;
  margin:0 auto 0 auto;
  /*background-color: #ffeeee;*/

}
.wrap_section_narrow_wc{
  width:620px;

  margin:0 auto 0 auto;
  padding-left: 20px;
  padding-right: 20px;
}
.leftcol{
  width: 219px;
  margin-top: 15px;

}
.leftcolform{
  width: 150px;

}
.leftcol2{
  margin-top: 15px;
  width: 400px;

}
.longcol{
  width: 401px;

}
.midcol{
  width: 182px;

}
.rightcol{
  width: 219px;
  margin-top: -2px;

}
.wrap_section_narrow2{
  width:550px;
  margin:0 auto 0 auto;
  padding-left: 10px;
}
.modal_wc{
  display: none;
  overflow: auto;
  overflow-y: scroll;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1050;
  -webkit-overflow-scrolling: touch;
  outline: 0;
  background-color: rgba(0,0,0,0.4);



}
.c_button{
  cursor: pointer;
  width: 140px;
  background: linear-gradient(rgb(0, 213, 179), rgb(0, 173, 89));
  border-radius: 5px;

  text-align: center;

  height: 30px;
  padding-top: 10px;
  margin-top: -2px;
  color: #fff;
  font-family: 'GibsonLight', Verdana, sans-serif;
   font-size: 18px;

}
.modal-footer_wc {
  margin-top: 15px;
  height: 30px;
  padding: 16px 20px 20px;
  text-align: right;
  border-top: 1px solid #e5e5e5;
}
.modal-dialog_wc {
  width: 600px;
  /*height: 400px;*/
  margin: 100px auto;
  position: relative;
}
.modal-content_wc {
  position: relative;
  background-color: #fff;
  border: 1px solid #999;
  border: 1px solid rgba(0,0,0,.2);
  border-radius: 6px;

  background-clip: padding-box;
  outline: 0;
  -webkit-box-shadow: 0 5px 15px rgba(0,0,0,.5);
  box-shadow: 0 5px 15px rgba(0,0,0,.5);
}
.modal-header_wc {
  padding: 15px;
  border-bottom: 1px solid #e5e5e5;
  min-height: 16.42857143px;
  font-family: 'GibsonRegular', Verdana, sans-serif;
}
.modal-body_wc {
  position: relative;
  padding: 20px;
  height: 260px;
}
.modalchoice{
  width: 270px;
  font-family: 'GibsonLight', Verdana, sans-serif;
  font-size: 18px;
}
.modalchoicecontent{
  margin-top: 15px;


}
.modalchoicetitle{
  padding-bottom: 15px;
}
.modalbutton_wc{
  cursor: pointer;
  width: 220px;
  background: linear-gradient(rgb(203, 203, 203), rgb(175, 175, 175));
  border-radius: 5px;
  height: 30px;
  padding-top: 10px;
  padding-left: 15px;
  color: #fff;



}
.modalbutton_wc:hover{
  background: linear-gradient(rgb(0, 192, 244), rgb(0, 150, 210));
}
.dotarrow{
  position: absolute;
  margin-top: -40px;
  margin-left: 140px;
}
.instruction{
  font-family: 'GibsonLight', Verdana, sans-serif;
   font-size: 24px;
      padding-top: 20px;
         padding-bottom: 20px;

}
.block{
  margin-top: 37px;
}
.blockwide{
 margin-top: 40px;
 background-color: #ccc;
 width: 320px;


}
.subline{
font-family: 'GibsonLight', Verdana, sans-serif;
   font-size: 16px;
      padding-top: 00px;
         padding-bottom: 20px;

}
.spacer{
  height: 60px;
  font-family: 'GibsonLight', Verdana, sans-serif;
   font-size: 16px;
      padding-top: 20px;
         /*padding-bottom: 20px;*/
}
.spacer_wc3{
  /*height: 60px;*/
  font-family: 'GibsonLight', Verdana, sans-serif;
   font-size: 16px;
      padding-top: 40px;
      line-height: 24px;
      /*text-align: center;*/
         /*padding-bottom: 20px;*/
}
.spacer_wc3 a{
 color: #00b05c;

  }
.spacer_wc{
  height: 60px;
  font-family: 'GibsonLight', Verdana, sans-serif;
   font-size: 16px;
      padding-top: 40px;
      line-height: 24px;
      text-align: center;
         /*padding-bottom: 20px;*/
}
.spacer_wc2{
  height: 80px;
  font-family: 'GibsonLight', Verdana, sans-serif;
   font-size: 16px;
      padding-top: 50px;
      /*text-align: center;*/
         /*padding-bottom: 20px;*/
}
.spacer2{
  height: 160px;
}
.fullwidth{

 background-color: #f3f3f4;
 width: 100%;
 border-bottom: 1px solid #d3d3d3;

}
.fullwidth_botttom2{

 background-color: #fff;
 width: 100%;
 border-top: 1px solid #d3d3d3;
margin-top: 80px;
height: 100px;
padding-top: 45px;
font-family: 'GibsonLight', Verdana, sans-serif;
font-size: 14px;
}
/* ... */

